--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
+<!DOCTYPE html><html><head>
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
@@ -18,33 +16,62 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="FL Chart App is an application to demonstrate samples of the fl_chart (A Flutter package to draw charts).">
+  <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="FL Chart App">
+  <meta name="apple-mobile-web-app-title" content="ws_flutter">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png">
 
-  <title>FL Chart App</title>
+  <title>ws_flutter</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "1923839105";
+    const serviceWorkerVersion = "2203768376";
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="flutter.js" defer></script>
-</head>
+  <script src="flutter.js" defer=""></script>
+  
+  
+  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  <style id="splash-screen-style">
+    html {
+      height: 100%
+    }
 
-<style>
-    .loading {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    body {
+      margin: 0;
+      min-height: 100%;
+      background-color: #034565;
+          background-size: 100% 100%;
+    }
+
+    .center {
       margin: 0;
       position: absolute;
       top: 50%;
@@ -53,61 +80,73 @@
       transform: translate(-50%, -50%);
     }
 
-    .loader {
-      border-radius: 50%;
-      border: 6px solid ;
-      border-top: 6px solid transparent;
-      border-right: 6px solid #50E4FF;
-      border-bottom: 6px solid transparent;
-      border-left: 6px solid #50E4FF;
-      width: 52px;
-      height: 52px;
-      -webkit-animation: spin 2s linear infinite;
-      animation: spin 2s linear infinite;
+    .contain {
+      display:block;
+      width:100%; height:100%;
+      object-fit: contain;
     }
 
-    @-webkit-keyframes spin {
-      0% {
-        -webkit-transform: rotate(0deg);
-      }
-      100% {
-        -webkit-transform: rotate(360deg);
-      }
+    .stretch {
+      display:block;
+      width:100%; height:100%;
     }
 
-    @keyframes spin {
-      0% {
-        transform: rotate(0deg);
-      }
-      100% {
-        transform: rotate(360deg);
-      }
+    .cover {
+      display:block;
+      width:100%; height:100%;
+      object-fit: cover;
     }
-    body {
-      background: #282E45;
-    }
-</style>
 
+    .bottom {
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      -ms-transform: translate(-50%, 0);
+      transform: translate(-50%, 0);
+    }
+
+    .bottomLeft {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+    }
+
+    .bottomRight {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+    }
+  </style>
+  <script id="splash-screen-script">
+    function removeSplashFromWeb() {
+      document.getElementById("splash")?.remove();
+      document.getElementById("splash-branding")?.remove();
+      document.body.style.background = "transparent";
+    }
+  </script>
+</head>
 <body>
-  <div class="loading">
-    <div class="loader"></div>
-  </div>
-
+  
+  
+  
+  
+  
+  
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
+        },
+        onEntrypointLoaded: function(engineInitializer) {
+          engineInitializer.initializeEngine().then(function(appRunner) {
+            appRunner.runApp();
+          });
         }
-      }).then(function(engineInitializer) {
-        return engineInitializer.initializeEngine();
-      }).then(function(appRunner) {
-        return appRunner.runApp();
       });
     });
   </script>
 
-  <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="fl_chart" data-description="Support me on Buy me a coffee!" data-message="Your support motivates me to work more on the fl_chart package. Thank you!" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
-</body>
-</html>
+
+</body></html>
