--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <base href="/web_show/">
+    <base href="/web_show/tree/master/">
     <meta charset="UTF-8">
     <title>Wireless Demo</title>
     <meta name="description" content="Wireless Demo.">
