--- a/index_origin.html
+++ b/index_origin.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <base href="/web_show/">
+    <base href="$FLUTTER_BASE_HREF">
     <meta charset="UTF-8">
     <title>Wireless Demo</title>
     <meta name="description" content="Wireless Demo.">
@@ -13,16 +13,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="gallery">
-    <link rel="apple-touch-icon"
-          href="https://media.githubusercontent.com/media/yubinpeng2020/web_show/master/icons/ws_icon.png">
-    <link rel="icon" type="image/png"
-          href="https://media.githubusercontent.com/media/yubinpeng2020/web_show/master/ws_logo.png"
-          sizes="32x32"/>
+    <link rel="apple-touch-icon" href="icons/ws_icon.png">
+    <link rel="icon" type="image/png" href="ws_logo.png" sizes="32x32" />
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet" media="all">
-    <link href="https://fonts.googleapis.com/css?family=Google+Sans:700" rel="stylesheet"
-          media="all">
+    <link href="https://fonts.googleapis.com/css?family=Google+Sans:700" rel="stylesheet" media="all">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-HBB5H8CECM"></script>
@@ -32,8 +28,7 @@
     gtag('js', new Date());
 
     gtag('config', 'G-HBB5H8CECM');
-
-    </script>
+  </script>
 
     <!-- Renderer specifier -->
     <script>
@@ -43,9 +38,8 @@
       console.log(searchParams.get('renderer') + ' renderer requested in the URL');
     }
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "2960954498";
-
-    </script>
+    var serviceWorkerVersion = null;
+  </script>
 
     <script src="flutter.js" defer></script>
 </head>
@@ -55,8 +49,7 @@
     body {
       background-color: #030303;
     }
-
-</style>
+  </style>
 
 <!-- Background -->
 <style>
@@ -67,8 +60,7 @@
     body.dark {
       background-color: #241E30;
     }
-
-</style>
+  </style>
 <script>
     var queryParams = new URLSearchParams(window.location.search);
 
@@ -79,8 +71,7 @@
       ? "dark"
       : "light";
     document.body.classList.add(theme);
-
-</script>
+  </script>
 
 <!-- Loading indicator -->
 <div id="loading">
@@ -135,10 +126,8 @@
           transform: scale(0.01)
         }
       }
-
     </style>
-    <img src="https://media.githubusercontent.com/media/yubinpeng2020/web_show/master/icons/ws_icon.png"
-         alt="Loading indicator..."/>
+    <img src="icons/ws_icon.png" alt="Loading indicator..." />
 </div>
 <script>
     window.addEventListener('load', function () {
@@ -161,8 +150,7 @@
         }, 200);
       });
     });
-
-</script>
+  </script>
 
 <!-- App -->
 </body>
